# backend/alembic/versions/8611afc3febd_change_disk_usage_type.py
@@ -1,0 +1,38 @@
+"""change_disk_usage_type
+
+Revision ID: 8611afc3febd
+Revises: ce01d9bd7d44
+Create Date: 2025-10-08 14:41:34.254318
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+
+
+# revision identifiers, used by Alembic.
+revision: str = '8611afc3febd'
+down_revision: Union[str, Sequence[str], None] = 'ce01d9bd7d44'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    """Upgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.alter_column('quicklooks', 'disk_usage',
+               existing_type=sa.INTEGER(),
+               type_=sa.BigInteger(),
+               existing_nullable=False)
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    """Downgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.alter_column('quicklooks', 'disk_usage',
+               existing_type=sa.BigInteger(),
+               type_=sa.INTEGER(),
+               existing_nullable=False)
+    # ### end Alembic commands ###
